<resources>
    <string name="app_name">StudAssistant</string>
    <string name="login_text">Продолжить</string>
    <string name="options_title">Запись</string>
    <string name="appointment_title">Оформить запись</string>
    <string name="remove_button_text">Удалить</string>
    <string name="my_appointment_title">Мои записи</string>
    <string name="liked_title">Избранное</string>
    <string name="user_guide_title">Пользователю</string>
    <string name="about_title">О приложении</string>
    <string name="options_opened">Открыть меню</string>
    <string name="options_closed">Закрыть меню</string>
    <string name="about_hint">Пишите здесь:</string>
    <string name="about_text">Студ Ассистент - ваш мобильный помощник в студенческой жизни\nНиже вы можете связаться с разработчиком, поделиться своим мнением или предложить идеи для будущих обновлений</string>
    <string name="send_button_text">Отправить</string>
    <string name="name_field">Ваше имя</string>
    <string name="surname_field">Ваша фамилия</string>
    <string name="group_hint">Учебная группа</string>
    <string name="tutor_hint">Фамилия И.О. преподавателя</string>
    <string name="datetime_field">Дата и время консультации</string>
    <string name="confirm_button_text">Оформить</string>
    <string name="group_button_text">Учебная группа</string>
    <string name="tutor_button_text">Преподаватель</string>
    <string name="datetime_button_text">Дата и время</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="section_error_text">Сначала выберите преподавателя!</string>
    <string name="confirm_error_text">Заполните все разделы!</string>
    <string name="ok_error_text">Заполните все поля!</string>
    <string name="connection_error_text">Подключитесь к интернету!</string>
    <string name="current_appointment_text">ВАША ЗАПИСЬ\n(отобразится ниже по мере заполнения полей)</string>
    <string name="post_confirmation_text">Вы действительно хотите оформить запись?</string>
    <string name="delete_confirmation_text">Вы действительно хотите удалить выбранные записи?</string>
    <string name="confirmation_info_text">Если Вы оформите запись, вашему устройству будет присвоен уникальный идентификатор.\n\nСохраните его, чтобы иметь доступ к вашим записям!</string>
    <string name="post_success_text">Запись успешно оформлена!</string>
    <string name="remove_success_text">Удаление завершено!</string>
    <string name="remove_failure_text">Нет записей для удаления!</string>
    <string name="code_filter_hint">ваш идентификатор</string>
    <string name="auto_fill_button_text">Код</string>
    <string name="add_to_liked_text">Добавлено в избранное!</string>
    <string name="exclude_from_liked_text">Удалено из избранного!</string>
    <string name="choose_tutor_text">Выберите преподавателя!</string>
    <string name="group_field">Группа</string>
    <string name="tutor_field">Преподаватель</string>
    <string name="start_text">Нажмите на следующий значок в левом верхнем углу для начала работы с приложением!</string>
    <string name="no_space_error">Извините, но все места на консультацию заняты</string>
    <string name="has_space_text">Доступно место на запись!</string>
</resources>